v1.1 release